fix align card

--- a/app/assets/stylesheets/promo.css.scss
+++ b/app/assets/stylesheets/promo.css.scss
@@ -3,6 +3,13 @@
   float: left;
   width: calc(100% - 50px);
   margin-left: 50px;
+
+  hr {
+    display: block;
+    float: left;
+    width: 80%;
+    margin: 0 10%;
+  }
 }
 .profile-card {
   display: block;
@@ -78,7 +85,7 @@
     display: block;
     float: left;
     padding: 0 2%;
-    margin: 0 2%;
+    margin: 1% 2%;
     border: solid 1px rgba(0,81,138,1);
     color: rgba(0,81,138,1);
   }
